[package]
name = "topdio"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jacoblurye/topdio"
documentation = "https://docs.rs/topdio"
description = "Like top, but with audio. Listen to your computer's resource usage statistics."
license = "MIT"

[dependencies]
anyhow = { version = "1.0.56" }
clap = { version = "3.1.8", features = ["derive"] }
cpal = { version = "0.13.5" }
crossterm = { version = "0.23.1" }
rand = { version = "0.8.5" }
sysinfo = { version = "0.23.5" }
tui = { version = "0.17.0" }