[package]
name = "topdio"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/jacoblurye/topdio"
documentation = "https://docs.rs/topdio"
description = "Like top, but with audio. Listen to your computer's resource usage statistics."
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
clap = { version = "4.5.23", features = ["derive"] }
cpal = { version = "0.15.3" }
crossterm = { version = "0.28.1" }
rand = { version = "0.8.5" }
sysinfo = { version = "0.33.0" }
tui = { version = "0.19.0" }
